--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -226,7 +226,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./AppOliverAndMe.exe"
+export_path="exported_versions/windows/AppOliverAndMe.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
