--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exported_versions/android/AppOliverAndMe.apk"
+export_path="exported_versions/android/Tek_Produkt_Oliver_Diogo (android).apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -226,7 +226,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exported_versions/windows/AppOliverAndMe.exe"
+export_path="exported_versions/windows/Tek_Produkt_Oliver_Diogo (windows).exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
